# fasel

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  TODO.txt  arena.cpp  arena.h  basics.h  build.sh  compile.cpp  compile.h  compile_commands.json  compile_ir.cpp  compile_ir.h  compile_test.cpp  context.cpp  context.h  desugar.cpp  desugar.h  disasm.cpp  disasm.h  example.fsl  example.jan  generate_bogus_program.fsl  ideas.fsl  integration_tests.cpp  integration_tests_interop.cpp  integration_tests_interop.h  jit.cpp  jit.h  lex.cpp  lex.h  lex_test.cpp  main.c  main.cpp  memory_pool.cpp  memory_pool.h  node.cpp  (+24 more)
attic/: 002-goto.fsl  compile_vm.cpp  compile_vm.h  compile_vm_test.cpp  disasm.cpp  op_code.h  stringify.cpp  vm.cpp
integration-tests/: 000-basics.fsl  001-if.fsl  001-short-circuit.fsl  002-proc.fsl  002-while.fsl  003-proc.fsl  010-fibonacci.fsl  020-while.fsl  030-for.fsl
